# ansible-collection-r2

./: .ansible-lint.yml  .gitignore  .yamllint  Makefile  README.md  devbox.json  galaxy.yml  pyproject.toml  requirements.yml
.github/workflows/: lint.yml  molecule.yml  release.yml
molecule/common/: prepare.yml
molecule/create/: converge.yml  molecule.yml  side_effect.yml  verify.yml
molecule/sync/: converge.yml  molecule.yml  side_effect.yml  verify.yml
playbooks/: create.yml  delete.yml  facts.yml  install.yml  prepare.yml  sync.yml
playbooks/vars/: main.yml
plugins/modules/: objects_delete.py
