[project]
name = "pokerops.r2"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "ansible-lint>=25.6.1",
  "ansible>=11.7.0",
  "molecule>=25.5.0",
  "cryptography>=45.0.0",
  "molecule-plugins>=23.7.0",
  "yamllint>=1.37.1",
  "netaddr>=1.3.0",
  "docker>=7.1.0",
  "boto3>=1.39.3",
  "botocore>=1.39.3",
  "typing>=3.10.0.0",
  "jmespath>=1.0.1",
  "s3transfer>=0.13.0",
  "python-dateutil>=2.9.0.post0",
  "urllib3>=2.5.0",
  "six>=1.17.0",
]
